--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         <div class="stacked-nav">
             <div class="container">
                 <ul class="navbar-nav d-flex flex-row justify-content-center align-items-center flex-wrap">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/custom-product-design.html" title="Custom Product Design">
                             Custom Product Design
                         </a>
-                    </li>
+                    </li> -->
 
                     <li>
                         <a class="nav-link" href="/custom-fabrication.html" title="Custom Fabrication">
@@ -144,11 +144,11 @@
                         </a>
                     </li>
 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="/prototype-development.html" title="Prototype Development">
                             Prototype Development
                         </a>
-                    </li>
+                    </li> -->
 
                     <li class="nav-item">
                         <a class="nav-link" href="/manufacturing-consulting.html"
